# chad-generator

./: .gitignore  pyproject.toml
src/chad_generator/: generator.py
